[gd_scene load_steps=5 format=3 uid="uid://bs44hthsbuah6"]

[ext_resource type="Script" path="res://Scripts/Level/WinZone.gd" id="1_7jvkm"]
[ext_resource type="Texture2D" uid="uid://ccc2yu17f42bt" path="res://icon.svg" id="2_nu2cf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygiaj"]
size = Vector2(1153.5, 190.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7nk27"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(500, 50, 1)
gravity = Vector3(0, 98, 0)
scale_min = 0.0
scale_max = 0.2

[node name="WinZone" type="Node2D"]
script = ExtResource("1_7jvkm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(577.25, 95.75)
shape = SubResource("RectangleShape2D_ygiaj")
debug_color = Color(0, 1, 0.227451, 0.419608)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1158.0
offset_bottom = 199.0
metadata/_edit_use_anchors_ = true

[node name="YouWin" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 116
text = "YOU WIN!!!"

[node name="NotEnough" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "NOT EOUGH KROMER."

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(575, 94)
amount = 80
process_material = SubResource("ParticleProcessMaterial_7nk27")
texture = ExtResource("2_nu2cf")
visibility_rect = Rect2(-548.836, -175.578, 1156.28, 386.963)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
